--- a/LanqiaoSignup.html
+++ b/LanqiaoSignup.html
@@ -11,6 +11,17 @@
     crossorigin="anonymous">
   <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-T
     c5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <style>
+      .reg-main {
+      background: #fff;
+      border-radius: 12px;
+      box-sizing: border-box;
+      margin: 20px auto 100px auto;
+      overflow: hidden;
+      padding: 0 35px 45px 35px;
+      width: 430px;
+  }
+  </style>
   </head>
   
   <body>
@@ -47,6 +58,16 @@
                 <input type="text" class="form-control" placeholder="请输入手机号码" aria-describedby="sizing-addon1">
               </div>
               <br/>
+              <div class="input-group input-group-md">
+                <span class="input-group-addon">密码</span>
+                <input type="text" class="form-control" placeholder="密码长度6-16位，包含数字与字母" aria-describedby="sizing-addon1">
+              </div>
+              <br/>
+              <div class="input-group input-group-md">
+                <span class="input-group-addon">重复密码</span>
+                <input type="text" class="form-control" placeholder="请再次输入密码" aria-describedby="sizing-addon1">
+              </div>
+              <br/>
               <div class="row">
                 <div class="col-md-8 col-xs-12">
                   <div class="input-group input-group-md" style="margin-right: 0">
@@ -68,7 +89,7 @@
           </div>
           <hr/>
           <footer class="text-center">
-            <p>powered by czqmike</p>
+            <p>powered by <a href="czqmike@foxmail.com">czqmike</a></p>
           </footer>
         </div>
       </div>
