--- a/LanqiaoSignup.html
+++ b/LanqiaoSignup.html
@@ -12,15 +12,11 @@
   <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-T
     c5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <style>
-      .reg-main {
-      background: #fff;
-      border-radius: 12px;
-      box-sizing: border-box;
-      margin: 20px auto 100px auto;
-      overflow: hidden;
-      padding: 0 35px 45px 35px;
-      width: 430px;
-  }
+    body{
+      /* background-color:#000; */
+      background-image: url(bgpictrue.jpg);
+      background-size: 100%;
+    }
   </style>
   </head>
   
@@ -60,12 +56,12 @@
               <br/>
               <div class="input-group input-group-md">
                 <span class="input-group-addon">密码</span>
-                <input type="text" class="form-control" placeholder="密码长度6-16位，包含数字与字母" aria-describedby="sizing-addon1">
+                <input type="password" class="form-control" placeholder="密码长度6-16位，包含数字与字母" aria-describedby="sizing-addon1">
               </div>
               <br/>
               <div class="input-group input-group-md">
                 <span class="input-group-addon">重复密码</span>
-                <input type="text" class="form-control" placeholder="请再次输入密码" aria-describedby="sizing-addon1">
+                <input type="password" class="form-control" placeholder="请再次输入密码" aria-describedby="sizing-addon1">
               </div>
               <br/>
               <div class="row">
@@ -76,7 +72,7 @@
                   </div>
                 </div>
                 <div class="col-md-4 col-xs-6">
-                  <button class="btn btn-success btn-md">获取验证码</button>
+                  <button class="btn btn-success btn-md">获 取 验 证 码</button>
                 </div>
               </div>
               <br/>
@@ -89,7 +85,7 @@
           </div>
           <hr/>
           <footer class="text-center">
-            <p>powered by <a href="czqmike@foxmail.com">czqmike</a></p>
+            <p>powered by <a href="czqmike@foxmail.com">czqmike</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </footer>
         </div>
       </div>
