--- a/LanqiaoSignup.html
+++ b/LanqiaoSignup.html
@@ -10,16 +10,16 @@
   <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
-    body{
+    .bodybg{
       /* background-color:#000; */
-      background-image: url(bgpictrue.jpg);
+      background-image: url('/image/bgpictrue.jpg') ;
       background-size: 100%;
-      background-color: #8080c0;  /*图片未加载成功时的备用背景色*/
+      background-color: #8080c0;  /*图片未加载成功时的备用背景色*/  
     }
   </style>
   </head>
   
-  <body>
+  <body class="bodybg">
     <form>
       <div class="container">
         <br/>
